# GP2040-CE-v7.1.1-sync

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  TAP_SYNC_README.md  build_fw.bat  build_fw.ps1  test_finger_gap.py  test_sync.py
.github/: FUNDING.yml
headers/: gp2040.h
src/: gp2040.cpp
tools/finger-gap-tester/: Cargo.toml
tools/finger-gap-tester/src/: app.rs  input.rs  main.rs  stats.rs
www/src/Locales/en/: HomePage.jsx  SettingsPage.jsx
