[package]
name = "finger-gap-tester"
version = "0.1.0"
edition = "2021"
description = "NOBD Finger Gap Tester - measures simultaneous button press gaps for FGC players"

[dependencies]
eframe = { version = "0.33", default-features = false, features = ["default_fonts", "glow"] }
egui = "0.33"
egui_plot = "0.34"
gilrs = "0.11"

[profile.release]
opt-level = 2
strip = true
lto = true
